--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -420,6 +420,9 @@ ol.list-check li + li {
   line-height: 20px;
   text-transform: uppercase;
   color: #232323;
+  direction: rtl;
+  float: right;
+  
   overflow: hidden;
 }
 .block-title span {
@@ -6602,4 +6605,7 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+.pkh-element-direction{
+  direction: rtl;
 }
