translate and fix direction of compare-products.html

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -6609,3 +6609,6 @@ input[type=number]::-webkit-outer-spin-button {
 .pkh-element-direction{
   direction: rtl;
 }
+.pkh-element-float{
+  float: right;
+}
